Добави JPA, переписал перевод средств, добавил вывод средств
