# docs/api-docs.yaml
@@ -7,6 +7,21 @@ servers:
   - url: http://localhost:8080
     description: Generated server url
 paths:
+  /api/v1/transactions/replenishment:
+    post:
+      tags:
+        - API для счетов
+      summary: Пополнить счет
+      operationId: replenishment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UnidirectionalTransactionDto'
+        required: true
+      responses:
+        "200":
+          description: OK
   /api/v1/accounts:
     post:
       tags:
@@ -46,8 +61,35 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AccountDto'
+    delete:
+      tags:
+        - API для счетов
+      summary: Закрыть счет
+      operationId: closeAccount
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
 components:
   schemas:
+    UnidirectionalTransactionDto:
+      required:
+        - accountId
+      type: object
+      properties:
+        accountId:
+          type: string
+          format: uuid
+        amount:
+          minimum: 1
+          type: integer
+          format: int64
     NewAccountDto:
       required:
         - clientFullName
