# src/main/java/ru/hits/trb/trbcore/dto/account/UnidirectionalTransactionDto.java
@@ -1,0 +1,18 @@
+package ru.hits.trb.trbcore.dto.account;
+
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+import java.util.UUID;
+
+@Data
+public class UnidirectionalTransactionDto {
+
+    @NotNull
+    private UUID accountId;
+
+    @Min(1)
+    private long amount;
+
+}
